Attempt to fix font-sizes on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,7 @@
 $darkBlue: rgb(1, 1, 140);
 $red: #984447;
 $blue: #2e7bcf;
+$mainFontSize: 1em;
 
 * {
 	padding: 0;
@@ -12,11 +13,12 @@ $blue: #2e7bcf;
 
 body {
 	font-family: 'Open Sans', sans-serif;
+	font-size: 100%;
 	background-color: #eeeeee;
 }
 
 p {
-	font-size: 20px;
+	font-size: $mainFontSize;
 	line-height: 1.4;
 }
 
@@ -28,7 +30,7 @@ p {
 
 #header {
 	background-color: $blue;
-	font-size: 22px;
+	font-size: 1.4em;
 	padding: 20px;
 	color: #eeeeee;
 }
@@ -107,13 +109,13 @@ h1 {
 	text-align: center;
 	clear: both;
 	padding: 10px;
-	font-size: 28pt;
+	font-size: 2.4em;
 	font-weight: bold;
 }
 
 #bio {
 	text-align: center;
-	font-size: 20px;
+	font-size: $mainFontSize;
 	max-width: 700px;
 	margin: auto;
 
@@ -144,7 +146,7 @@ h1 {
 	@include infoPanel();
 
     .workDate {
-    	font-size: 20px;
+    	font-size: $mainFontSize;
     	float: right;
     }
 
@@ -191,7 +193,7 @@ h1 {
 }
 
 @mixin btn() {
-	font-size: 20px;
+	font-size: $mainFontSize;
 	border: 0;
 	box-shadow: none;
 	padding: 5px;
@@ -237,18 +239,18 @@ h1 {
 	    margin-top: 18px;
 	    text-align: left;
 	    padding: 1%;
-	    font-size: 18px;
+	    font-size: $mainFontSize;
 	}
 
 	.contactInput {
 		@include inputField();
 		display: inline-block;
 		width: 38%;
-		height: 5vh;
+		height: 4vh;
 		background-color: #c1c1c1;
 		border: none;
 		padding: 5px;
-		font-size: 20px;
+		font-size: $mainFontSize;
 		text-align: left;
 	}
 
@@ -265,5 +267,5 @@ h1 {
 	@include placeholder();
 	content: attr(placeholder);
 	display: block; /* For Firefox */
-	font-size: 18px;
+	font-size: $mainFontSize;
 }
